Fix z-index of the header in folder view

--- a/src/app/pages/front-page/front-page.component.scss
+++ b/src/app/pages/front-page/front-page.component.scss
@@ -1,4 +1,5 @@
 .header-sticky {
   position: sticky;
   top: 0;
+  z-index: 999;
 }
